--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,5 @@
 html, body {
-  background: white;
+  background: #fff;
   padding: 0;
   margin: 0;
   font-family: "Lato", "Arial", sans-serif;
@@ -73,7 +73,7 @@ pre {
 }
 
 
-/* Nav & Midnight */
+/* Nav & energy */
 nav.fixed {
   position: fixed;
   top: 0;
@@ -100,26 +100,26 @@ nav.fixed {
     background-size: 800px 1050px;
   }
 
-.midnightHeader.white .logo {
+.kaseiiki.white .logo {
   background-position: -0px 0%;
 }
-.midnightHeader.default .logo,
-.midnightHeader.black .logo {
+.kaseiiki.default .logo,
+.kaseiiki.black .logo {
   background-position: -0px 16.67%;
 }
-.midnightHeader.blue .logo {
+.kaseiiki.blue .logo {
   background-position: -0px 33.33%;
 }
-.midnightHeader.light .logo {
+.kaseiiki.light .logo {
   background-position: -0px 50.00%;
 }
-.midnightHeader.dark .logo {
+.kaseiiki.dark .logo {
   background-position: -0px 66.67%;
 }
-.midnightHeader.lighter .logo {
+.kaseiiki.lighter .logo {
   background-position: -0px 83.33%;
 }
-.midnightHeader.full .logo {
+.kaseiiki.full .logo {
   background-position: -0px 100%;
 }
 
@@ -180,7 +180,7 @@ header, section, footer {
 
 header {
   padding: 100px 0 0 0;
-  background: #ffffff;
+  background: #fff;
   text-align: center;
   min-height: 700px;
 }
@@ -224,7 +224,7 @@ section.step {
 
 footer {
   position: relative;
-  min-height: 100vh;
+  min-height: 80vh;
   background: rgb(73,118,151); /* Old browsers */
   background: -moz-linear-gradient(top,  rgba(73,118,151,1) 0%, rgba(206,208,204,1) 80%, rgba(206,208,204,1) 80%); /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(73,118,151,1)), color-stop(80%,rgba(206,208,204,1)), color-stop(80%,rgba(206,208,204,1))); /* Chrome,Safari4+ */
@@ -234,12 +234,6 @@ footer {
   background: linear-gradient(to bottom,  rgba(73,118,151,1) 0%,rgba(206,208,204,1) 80%,rgba(206,208,204,1) 80%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#497697', endColorstr='#ced0cc',GradientType=0 ); /* IE6-9 */
 }
-  footer .illustration-city {
-    padding-top: 50vh;
-    background: url(images/city.png) no-repeat 50% 100%;
-    min-height: 50vh;
-  }
-
 
 .token.comment,
 .token.prolog,
@@ -428,5 +422,197 @@ pre.line-numbers > code {
     margin-top: -26.25px;
     background-image: url(images/logos-mobile.png);
     background-size: 280px 368px;
+  }
+}
+.star-wars-intro {
+  background: url("images/sw2.jpg") center center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  font-family: "Droid Sans", arial, verdana, sans-serif;
+  font-weight: 700;
+  color: #EBD71C;
+  background-color: #000;
+  overflow: hidden;
+  position: relative;
+}
+
+.star-wars-intro p.intro-text {
+  position: relative;
+  max-width: 16em;
+  font-size: 200%;
+  font-weight: 400;
+  margin: 20% auto;
+  color: #4ee;
+  opacity: 0;
+  z-index: 1;
+  text-align: center;
+  -webkit-animation: intro 2s ease-out;
+  -moz-animation: intro 2s ease-out;
+  -ms-animation: intro 2s ease-out;
+  -o-animation: intro 2s ease-out;
+  animation: intro 2s ease-out;
+}
+
+.star-wars-intro .main-content{
+  margin-left: auto;
+  margin-right: auto;
+  position: absolute;
+  z-index: 3;
+  width: 98%;
+  height: 50em;
+  bottom: 0;
+  font-size: 80px;
+  font-weight: bold;
+  text-align: justify;
+  overflow: hidden;
+  transform-origin: 50% 100%;
+  transform: perspective(350px) rotateX(25deg);
+}
+
+.star-wars-intro .main-content:after {
+  position: absolute;
+  content: ' ';
+  top: 0;
+  bottom: 60%;
+  background-image: linear-gradient(top, rgba(0,0,0,1) 0%, transparent 100%);
+  pointer-events: none;
+}
+
+.star-wars-intro .space-button {
+  color: #EBD71C;
+  border: 12px solid #EBD71C;
+  padding: 20px;
+  background: transparent;
+  text-decoration: none;
+  margin: 0 auto;
+  display: block;
+  text-align: center;
+}
+
+.star-wars-intro .space-button:hover {
+  background-color: #D2BE03;
+  border-color: #D2BE03;
+  color: black;
+}
+
+.star-wars-intro .space-button:active,
+.star-wars-intro .space-button:focus {
+  background-color: #B8A40A;
+  border-color: #B8A40A;
+  color: black;
+}
+
+.title-content {
+  position: absolute;
+  top: 100%;
+  animation: scroll 120s linear 4s forwards;
+}
+
+.star-wars-intro .title-content > .content-header {
+  text-align: center;
+}
+
+/* Main Image Styles */
+
+.star-wars-intro .main-logo {
+  position: absolute;
+  width: 2.6em;
+  left: 50%;
+  top: 20vh;
+  font-size: 10em;
+  text-align: center;
+  margin-left: -1.3em;
+  line-height: 0.8em;
+  letter-spacing: -0.05em;
+  color: #000;
+  text-shadow: -2px -2px 0 #EBD71C, 2px -2px 0 #EBD71C, -2px 2px 0 #EBD71C, 2px 2px 0 #EBD71C;
+  opacity: 0;
+  z-index: 1;
+  -webkit-animation: logo 5s ease-out 2.5s;
+  -moz-animation: logo 5s ease-out 2.5s;
+  -ms-animation: logo 5s ease-out 2.5s;
+  -o-animation: logo 5s ease-out 2.5s;
+  animation: logo 5s ease-out 2.5s;
+}
+
+.star-wars-intro .main-logo > img {
+  max-width: 100%;
+}
+
+@-webkit-keyframes intro {
+  0% { opacity: 1; }
+  90% { opacity: 1; }
+  100% { opacity: 0; }
+}
+
+@-moz-keyframes intro {
+  0% { opacity: 1; }
+  90% { opacity: 1; }
+  100% { opacity: 0; }
+}
+
+@-ms-keyframes intro {
+  0% { opacity: 1; }
+  90% { opacity: 1; }
+  100% { opacity: 0; }
+}
+
+@-o-keyframes intro {
+  0% { opacity: 1; }
+  90% { opacity: 1; }
+  100% { opacity: 0; }
+}
+
+@keyframes intro {
+  0% { opacity: 1; }
+  90% { opacity: 1; }
+  100% { opacity: 0; }
+}
+
+
+@-webkit-keyframes logo {
+  0% { -webkit-transform: scale(1); opacity: 1; }
+  50% { opacity: 1; }
+  100% { -webkit-transform: scale(0.1); opacity: 0; }
+}
+
+@-moz-keyframes logo {
+  0% { -moz-transform: scale(1); opacity: 1; }
+  50% { opacity: 1; }
+  100% { -moz-transform: scale(0.1); opacity: 0; }
+}
+
+@-ms-keyframes logo {
+  0% { -ms-transform: scale(1); opacity: 1; }
+  50% { opacity: 1; }
+  100% { -ms-transform: scale(0.1); opacity: 0; }
+}
+
+@-o-keyframes logo {
+  0% { -o-transform: scale(1); opacity: 1; }
+  50% { opacity: 1; }
+  100% { -o-transform: scale(0.1); opacity: 0; }
+}
+
+@keyframes logo {
+  0% { transform: scale(1); opacity: 1; }
+  50% { opacity: 1; }
+  100% { transform: scale(0.1); opacity: 0; }
+}
+
+@keyframes scroll {
+  0% { top: 100%; }
+  100% { top: -170%; }
+}
+
+@media screen and (max-width: 720px) {
+  .star-wars-intro .main-content {
+    font-size: 35px;
+  }
+  .star-wars-intro .title-content {
+    position: absolute;
+    top: 100%;
+    animation: scroll 100s linear 4s forwards;
   }
 }
